--- a/src/index.html
+++ b/src/index.html
@@ -11,26 +11,6 @@
     ></script>
   </head>
   <body>
-    <div id="app">
-      <h1>GitHub Starts</h1>
-
-      <div class="tabsContainer">
-        <button class="tab">API</button>
-        <button class="tab active">로컬</button>
-      </div>
-
-      <form class="formContainer">
-        <input
-          class="searchInput"
-          type="text"
-          placeholder="검색어를 입력하세요"
-        />
-        <button class="searchBtn">
-          <i class="fa-solid fa-magnifying-glass"></i>
-        </button>
-      </form>
-
-      <ul class="listContainer"></ul>
-    </div>
+    <div id="app"></div>
   </body>
 </html>
